fixed double scrollbar issue

--- a/public/stylesheets/about.scss
+++ b/public/stylesheets/about.scss
@@ -9,7 +9,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  overflow-x: hidden;
 }
 p {
   margin: 0.7em;
