--- a/public/stylesheets/contact.scss
+++ b/public/stylesheets/contact.scss
@@ -10,7 +10,6 @@ html {
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
-  overflow-x: hidden;
 
   .heading {
     display: flex;
